tab button overflow bug

--- a/app/views/pages/dataset/key/tabs.styl
+++ b/app/views/pages/dataset/key/tabs.styl
@@ -9,7 +9,7 @@
     li {
         display inline-block
     }
-    a, span {
+    .tab>a, .tab>span {
         display block
         border-bottom 2px solid transparent
         text-align center
